User management endpoints by admin and content blogs management endpoints configuration for super admin and admins
